syntax = "proto3";
package metisfl;

message TensorQuantifier {
  optional uint32 tensor_non_zeros = 1;
  optional uint32 tensor_zeros = 2; 
  uint32 tensor_size_bytes = 3;
}

message Tensor {
  uint32 length = 1;
  repeated int64 dimensions = 2;
  bytes value = 3;
}

message Model {
  bool encrypted = 1;
  repeated Tensor tensors = 2;
}